# INFOMGP-Final

./: .gitignore  CMakeLists.txt  README.md  constraints.h  line_cylinders.h  main.cpp  scene.h
cmake/: FindLIBIGL.cmake
data/: mixedscene.txt  platform.off  singlebunnyscene.txt  singlecylinderscene.txt  singletetscene.txt  stairwayscene.txt  tetscene.txt  threebunnyscene.txt  towerscene-constraints.txt  towerscene.txt  towersceneattached.txt  twocylinderscene.txt  twotetscene.txt
demos/: Practical2_bin  infomgp-practical2_bin  practical2_bin
